# ftp2webdav

./: .gitignore  README.md  example.conf  ftp2webdav  pyproject.toml  setup.py
ftp2webdav/: __init__.py  cli.py  config.py
